--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,5 @@
-body {
+body { 
+  background-color: rgb(182, 202, 220);
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
