--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,5 @@
 body { 
-  background-color: rgb(182, 202, 220);
+  background-color: yellow;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
